refactor: Improve DTOs and error handling mechanisms
- Add JWT_EXPIRES_IN to .env.example and use in JWT config
- Refactor AuthService to use DTOs and add detailed error logging
- Remove unused constants.ts
- Improve DocumentsService error handling and logging
- Update DTOs for stricter validation
- Clean up test logging in app.e2e-spec.ts

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,5 @@ PINATA_JWT_TOKEN="xxx"
 PINATA_API_URL="xxx"
 ADDRESS_ADMIN="xxx"
 JWT_SECRET="xxx"
+JWT_EXPIRES_IN="xxx"
 EVM_WALLET_PRIVATE_KEY="xxx"
