--- a/package.json
+++ b/package.json
@@ -27,16 +27,20 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.2",
+    "blockstore-core": "^5.0.4",
     "cache-manager": "^6.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
     "ethers": "^6.14.3",
+    "ipfs-only-hash": "^4.0.0",
+    "ipfs-unixfs-importer": "^15.3.2",
     "multer": "^2.0.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "typestub-ipfs-only-hash": "^4.0.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
