--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ JWT_SECRET="xxx"
 JWT_EXPIRES_IN="xxx"
 EVM_WALLET_PRIVATE_KEY="xxx"
 CORS_ORIGIN="xxx"
+HOLESKY_RPC_URL="XXX"
+BASE_SEPOLIA_RPC_URL="XXX"
